# SteamGamesViewer

./: .editorconfig  .gitignore  .travis.yml  Dockerfile  LICENSE  README.md  SteamGamesViewer.py  __main__.py  game.py  pyproject.toml  requirements.txt  setup.py  steam_account.py  steam_helper.py
static/: index.html
steamgamesviewer/: game.py  games_viewer.py  steam_account.py
steamgamesviewer/templates/: error.html  index.html  profile.html
templates/: profile.html
