[tool.poetry]
name = "steamgamesviewer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
packages = [
    { include="steamgamesviewer", from="." },
]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.0"
requests = "^2.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
web = "steamgamesviewer.games_viewer:main"
